Fix the width of the search field in collapsed mode.

--- a/styles/base.css
+++ b/styles/base.css
@@ -161,7 +161,7 @@ button {
 /* Search */
 
 #search {
-  width: 30%;
+  width: 48vw;
   font-size: 17px;
   margin: 6px 30vw;
 }
